src/web/css/catwl.css
body {
	background: #ade6c4;
}

table.form {
	border: 1px solid var(--border-color-base, #a2a9b1);
	background-color: var(--background-color-neutral-subtle, #f8f9fa);
	margin: 1em 0;
	border-radius: 4px;
	padding: 5px;
}

th.form {
	background: #f2f2f2;
	border:1px solid #bbb;
	border-top: 1px solid #fff;
	border-left: 1px solid #fff;
	text-align: center;
}

td.form {
	padding: 0 10px;
}

table.wikitable {
	background-color: var(--background-color-neutral-subtle, #f8f9fa);
	color: var(--color-base,#202122);
	margin: 1em 0;
	border: 1px solid var(--border-color-base, #a2a9b1);
	border-collapse: collapse
}

table.wikitable > tr > th,
table.wikitable > tr > td,
table.wikitable > * > tr > th,
table.wikitable > * > tr > td {
	border: 1px solid var(--border-color-base, #a2a9b1);
	padding: 0.2em 0.4em;
}

table.wikitable > tr > th,
table.wikitable > * > tr > th {
	background-color: var(--background-color-neutral, #eaecf0);
	color: var(--color-base, #202122);
	text-align: center;
}

table.wikitable > caption {
	font-weight: bold;
}

table.wikitable th.header { 
	background-image: url(../img/cwb/sort_both.svg);
	cursor: pointer;
	background-repeat: no-repeat;
	background-position: center right;
	padding-right: 21px;
}

table.wikitable th.headerSortUp {
	background-image: url(../img/cwb/sort_up.svg);
	background-color: var(--background-color-interactive--active, #c8ccd1);
}

table.wikitable th.headerSortDown {
	background-image: url(../img/cwb/sort_down.svg);
	background-color: var(--background-color-interactive--active, #c8ccd1);
}

a:link {
	text-decoration: none
}

a:hover, a:focus {
 	text-decoration: underline;
}

a.external {
    background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAFZJREFUeF59z4EJADEIQ1F36k7u5E7ZKXeUQPACJ3wK7UNokVxVk9kHnQH7bY9hbDyDhNXgjpRLqFlo4M2GgfyJHhjq8V4agfrgPQX3JtJQGbofmCHgA/nAKks+JAjFAAAAAElFTkSuQmCC") no-repeat scroll right center transparent;
    padding-right: 13px;
}

.ultooltip {
	border-bottom: currentcolor 1px dotted;
}

.toc {
	border: 1px solid var(--border-color-base, #a2a9b1);
	background-color: var(--background-color-neutral, #eaecf0);
	display: table;
	padding-right: 5px;
}

:root {
	/* can use light or dark user agent colors but defaults to light if browser doesn't specify */
	color-scheme: light dark;
	/* same colors as on Wikipedia */
	--color-base: #202122;
	--background-color-neutral: #eaecf0;
	--background-color-neutral-subtle: #f8f9fa;
	--border-color-base: #a2a9b1;
	--background-color-interactive: #eaecf0;
	--background-color-interactive--hover: #dadde3;
	--background-color-interactive--active: #c8ccd1;
}

@media (prefers-color-scheme: dark) {
	:root {
		--color-base: #eaecf0;
		--background-color-neutral: #27292d;
		--background-color-neutral-subtle: #202122;
		--border-color-base: #72777d;
		--background-color-interactive: #27292d;
		--background-color-interactive--hover: #404244;
		--background-color-interactive--active: #54595d;
	}
	table.wikitable th.header { 
		background-image: url(../img/cwb/sort_both_inverted.svg);
	}

	table.wikitable th.headerSortUp {
		background-image: url(../img/cwb/sort_up_inverted.svg);
	}

	table.wikitable th.headerSortDown {
		background-image: url(../img/cwb/sort_down_inverted.svg);
	}
	/* Remove green background on dark mode */
	body {
		background-color: revert;
	}
}

